# compleat

./: .gitignore  Completer.hs  Completion.hs  Main.hs  Makefile  Parser.hs  README.markdown  Setup.lhs  TODO.txt  Tokenize.hs  Usage.hs  compleat.cabal  compleat.hs  compleat_setup  compleat_setup.fish  stack.yaml
examples/: android.usage  cabal.usage  darcs.usage  htop.usage  top.usage
