Name:                compleat
Version:             0.1
Description:         Generate command-line completions from simple usage descriptions.
License:             MIT
License-file:        README.markdown
Author:              Matt Brubeck
Maintainer:          mbrubeck@limpet.net
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable compleat
  Main-is:           compleat.hs
  Build-Depends:     base >= 3 && < 5,
                     parsec >= 3,
                     directory, haskell98
